@@ -2,7 +2,7 @@ name = Array-Rounded
 
 [ReadmeFromPod]
 ; enabled = false
-filename = lib/Array/Rounded.rakumod
+filename = doc/Array-Rounded.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/Array/Rounded.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
