@@ -1,0 +1,54 @@
+=begin pod
+
+=head1 NAME
+
+Array::Rounded - arrays that round indices while accessing elements
+
+=head1 SYNOPSIS
+
+=begin code :lang<raku>
+
+use Array::Rounded;
+
+my @a is Rounded = ^10;
+say @a[1.5];  # 2
+
+=end code
+
+=head1 DESCRIPTION
+
+Array::Rounded provides a subclass of C<Array> called C<Rounded> that
+will B<round> non-integer indices on the array, rather than truncating
+them.  Other than that, any arrays created with the C<Rounded> class
+will act as a normal C<Array>.
+
+=head1 IMPLEMENTATION DETAILS
+
+Because C<postcircumfix:<[ ]>> already intifies any non-integer value
+in current and possibly future versions of the Raku Programming Language,
+this module also exports some C<postcircumfix:<[ ]>> candidates to
+circumvent the premature intifications.
+
+Also, due to some issues with native arrays, it has as yet been
+impossible to provide similar functionality for native arrays.
+
+=head1 AUTHOR
+
+Elizabeth Mattijsen <liz@raku.rocks>
+
+Source can be located at: https://github.com/lizmat/Array-Rounded .
+Comments and Pull Requests are welcome.
+
+If you like this module, or what I’m doing more generally, committing to a
+L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
+deal to me!
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2022, 2025 Elizabeth Mattijsen
+
+This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
+
+=end pod
+
+# vim: expandtab shiftwidth=4
