@@ -1,6 +1,8 @@
 Revision history for Array-Rounded
 
 {{$NEXT}}
+    - Add CI badge for each OS
+    - Update copyright year
 
 0.0.2  2022-07-12T11:01:16+02:00
     - Make sure normal arrays keep working in the same scope
